apps/java-ssp-9/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-ssp-9
  namespace: dev
  labels:
    app: java-ssp-9
    backstage.io/kubernetes-id: java-ssp-9
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-ssp-9
  template:
    metadata:
      labels:
        app: java-ssp-9
        backstage.io/kubernetes-id: java-ssp-9
        environment: dev
    spec:
      containers:
        - name: java-ssp-9
          image: jaykumark7/java-ssp-9:1.0.4
          ports:
            - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
