apps/java-ssp-9/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ssp-9
  namespace: dev
  labels:
    backstage.io/kubernetes-id: java-ssp-9
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /java-ssp-9-dev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: java-ssp-9
                port:
                  number: 80
